# law_chat

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
mcp_client/: app.py  client.py
mcp_server/: server.py
shared/: db_utils.py  google_auth.py
